--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
 }
 .boxBiblia {
   border: 1px solid black;
-  background-color: #483D8B;
+  background-color: #005970;
   color: white;
   width: 225px; 
   height: 75px;
