--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@
 .boxBiblia {
   border: 1px solid black;
   background-image: linear-gradient(-50deg, rgba(72, 61, 139, 0.75) 35%, rgba(0, 89, 112, 0.75) 50%); 
+  z-index:0;
   color: white;
   width: 245px; 
   height: 95px;
@@ -35,7 +36,9 @@
 }
 
 .boxBiblia:hover {
-  background-color: #7B68EE;
+/*   background-color: #7B68EE; */
+background-image: linear-gradient(180deg, rgba(123, 104, 238, 1) 25%, rgba(0, 152, 104, 0) 100%);
+  z-index:0;
 }
 
 .boxBiblia:hover .row1 {
