--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
 }
 .boxBiblia {
   border: 1px solid black;
-  background-image: linear-gradient(-50deg, rgba(72, 61, 139, 0.75) 35%, rgba(0, 89, 112, 0.75) 50%); 
+background-image: linear-gradient(-50deg, rgba(72, 61, 139, 1) 35%, rgba(0, 89, 112, 1) 50%);
   z-index:-1;
   color: white;
   width: 245px; 
@@ -37,7 +37,7 @@
 
 .boxBiblia:hover {
 /*   background-color: #7B68EE; */
-background-image: linear-gradient(-50deg, rgba(72, 61, 139, 1) 35%, rgba(0, 89, 112, 1) 50%);
+background-image: #005970;
 z-index:-1;
 }
 
