--- a/main.css
+++ b/main.css
@@ -80,7 +80,7 @@ label::before {
 }
 
 #expand {
-/*   height: 0px; */
+  height: 0px;
   overflow: hidden;
   transition: height 0.5s;
   color: #000;
@@ -92,6 +92,7 @@ section {
 
 #toggle:checked~#expand {
   overflow: visible;
+  height: 100%;
 }
 
 #toggle:checked~label::before {
