--- a/main.css
+++ b/main.css
@@ -36,7 +36,6 @@ background-image: linear-gradient(-50deg, rgba(72, 61, 139, 1) 35%, rgba(0, 89, 
 }
 
 .boxBiblia:hover {
-/*   background-color: #7B68EE; */
 background-image: #005970;
 z-index:-1;
 }
@@ -71,7 +70,8 @@ label::before {
   font-weight: bold;
   font-size: 12px;
   content: "↓";
-  vertical-align: text-top;
+  vertical-align:center;
+  text-align: center;
   display: inline-block;
   width: 20px;
   height: 20px;
